--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -16,7 +16,7 @@
     "source": "https://github.com/MarPrieto7/Happyphone_Add-to-cart"
   },
   {
-    "title": "Project Ecommerce en React",
+    "title": "Project Ecommerce",
     "imageSrc": "projects/remataplantas.png",
     "description": "Este es un proyecto que se hizo para integrar React.",
     "skills": ["React", "Javascript", "Node"],
